fix: resolve overflow issues on mobile nav menu

--- a/app/_components/nav/mobile-nav.module.css
+++ b/app/_components/nav/mobile-nav.module.css
@@ -129,6 +129,10 @@
   }
 }
 
+.hiddenBackgroundShadow {
+  box-shadow: -10px 0px 16px rgb(0 0 0 / 0.1);
+}
+
 .arrowTransition {
   transition-property: opacity, transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
